using JS for project href and resources links;

--- a/projects/project3.html
+++ b/projects/project3.html
@@ -35,7 +35,7 @@
 	    <div class="container">
 	      <a class="navbar-brand" href="../index.html">Vinay</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
+	        <span class="oi oi-menu"></span>
 	      </button>
 
         <div class="collapse navbar-collapse project-navbar" id="ftco-nav"></div>
@@ -81,25 +81,16 @@
           <div class="col-lg-4 sidebar ftco-animate ftco-no-pb">
             <div class="sidebar-box ftco-animate">
               <h3 class="heading-sidebar">Resources</h3>
-              <ul class="ftco-sidebar-social">
-                <li class="ftco-animate"><a href="#"><span class="icon-github"></span>GitHub Repository</a></li>
-                <li class="ftco-animate"><a href="#"><span class="fa fa-file-pdf-o" aria-hidden="true"></span>Project Report</a></li>
-                <li class="ftco-animate"><a href="#"><span class="fas fa-file-alt"></span>Publication</a></li>
+              <ul class="ftco-sidebar-social project-sidebar-links" project-number="3">
+                <li class="ftco-animate"><a class="github-link"></a></li>
+                <li class="ftco-animate"><a class="report-link"></a></li>
+                <li class="ftco-animate"><a class="paper-link"></a></li>
               </ul>
             </div>
             
             <div class="sidebar-box ftco-animate">
               <h3 class="heading-sidebar">Tech Stack</h3>
-              <div class="tagcloud">
-                <a class="tag-cloud-link">Python</a>
-                <a class="tag-cloud-link">office</a>
-                <a class="tag-cloud-link">building</a>
-                <a class="tag-cloud-link">land</a>
-                <a class="tag-cloud-link">table</a>
-                <a class="tag-cloud-link">interior</a>
-                <a class="tag-cloud-link">exterior</a>
-                <a class="tag-cloud-link">industrial</a>
-              </div>
+              <div class="tagcloud project-stack" project-number="3"></div>
             </div>
 
             <div class="sidebar-box ftco-animate">
