--- a/projects/project6.html
+++ b/projects/project6.html
@@ -35,7 +35,7 @@
 	    <div class="container">
 	      <a class="navbar-brand" href="../index.html">Vinay</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
+	        <span class="oi oi-menu"></span>
 	      </button>
 
         <div class="collapse navbar-collapse project-navbar" id="ftco-nav"></div>
@@ -85,7 +85,9 @@
           <div class="col-lg-4 sidebar ftco-animate ftco-no-pb">
             <div class="sidebar-box ftco-animate">
               <h3 class="heading-sidebar">Resources</h3>
-              <ul class="ftco-sidebar-social">
+              <ul class="ftco-sidebar-social project-sidebar-links" project-number="6">
+                <li class="ftco-animate"><a class="github-link"></a></li>
+                <li class="ftco-animate"><a class="report-link"></a></li>
                 <li class="ftco-animate"><a href="https://public.tableau.com/views/UniversityRanking_17336163911970/Dashboard1?:language=en-GB&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank" rel="noopener noreferrer"><span class="fa fa-link" aria-hidden="true"></span>Dashboard 1</a></li>
                 <li class="ftco-animate"><a href="https://public.tableau.com/views/UniversityRanking-Race/Dashboard2?:language=en-GB&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank" rel="noopener noreferrer"><span class="fa fa-link" aria-hidden="true"></span>Dashboard 2</a></li>
               </ul>
@@ -93,10 +95,7 @@
             
             <div class="sidebar-box ftco-animate">
               <h3 class="heading-sidebar">Tech Stack</h3>
-              <div class="tagcloud">
-                <a class="tag-cloud-link">MS Excel</a>
-                <a class="tag-cloud-link">Tableau</a>
-              </div>
+              <div class="tagcloud project-stack" project-number="6"></div>
             </div>
           </div>
         </div>
