--- a/projects/projects.html
+++ b/projects/projects.html
@@ -35,7 +35,7 @@
 	    <div class="container">
 	      <a class="navbar-brand" href="../index.html">Vinay</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
+	        <span class="oi oi-menu"></span>
 	      </button>
 
         <div class="collapse navbar-collapse project-navbar" id="ftco-nav"></div>
@@ -64,64 +64,63 @@
 
     <section class="ftco-section ftco-no-pb" id="projects-sub-section">
       <div class="container">
+        <div class="row justify-content-center mb-5 pb-5">
+          <div class="col-md-7 heading-section text-center ftco-animate">
+            <p>Click on project title or image to read more.</p>
+          </div>
+        </div>
         <div class="row d-flex">
           <!--project10-->
           <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry justify-content-end">
-              <a href="project10.html" class="block-20" style="background-image: url('images/image_10.jpg');"></a>
+              <a class="block-20 project-src" project-number="10" style="background-image: url('images/image_10.jpg');"></a>
               <div class="text mt-3 float-right d-block">
                 <div class="d-flex align-items-center mb-2 meta">
-                <p class="mb-0">
-                  <span class="mr-2">September, 2024</span>
-                  <!--<a href="#" class="mr-2">Admin</a>-->
-                  <a href="https://github.com/vinay-ram1999/TradeForecast" target="_blank" rel="noopener noreferrer" class="meta-chat">
-                    <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/TradeForecast">  
-                    <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/TradeForecast">
-                  </a>
-                </p>
-              </div>
-              <h3 class="heading"><a class="project-title" project-number="10" href="project10.html"></a></h3>
-              <p>A multi-horizon stock price forecasting framework using deep learning.</p>
+                  <p class="mb-0">
+                    <span class="mr-2">September, 2024</span>
+                    <!--<a class="mr-2">Admin</a>-->
+                    <a class="meta-chat github-repo" project-number="10" repo-badges="true"></a>
+                  </p>
+                </div>
+                <h3 class="heading"><a class="project-title project-src" project-number="10"></a></h3>
+                <p>A multi-horizon stock price forecasting framework using deep learning.</p>
+                <div class="tagcloud project-stack" project-number="10"></div>
               </div>
             </div>
           </div>
           <!--project9-->
           <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry justify-content-end">
-              <a href="project9.html" class="block-20" style="background-image: url('images/image_9.png');"></a>
+              <a class="block-20 project-src" project-number="9" style="background-image: url('images/image_9.png');"></a>
               <div class="text mt-3 float-right d-block">
                 <div class="d-flex align-items-center mb-2 meta">
-                <p class="mb-0">
-                  <span class="mr-2">September, 2024</span>
-                  <!--<a href="#" class="mr-2">Admin</a>-->
-                  <a href="https://github.com/vinay-ram1999/Healthcare-Analytics" target="_blank" rel="noopener noreferrer" class="meta-chat">
-                    <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/Healthcare-Analytics">  
-                    <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/Healthcare-Analytics">
-                  </a>
-                </p>
-              </div>
-              <h3 class="heading"><a class="project-title" project-number="9" href="project9.html"></a></h3>
-              <p>Exploratory data analysis on Cardiovascular diseases (CVD) data using MySQL & Tableau.</p>
+                  <p class="mb-0">
+                    <span class="mr-2">September, 2024</span>
+                    <!--<a class="mr-2">Admin</a>-->
+                    <a class="meta-chat github-repo" project-number="9" repo-badges="true"></a>
+                  </p>
+                </div>
+                <h3 class="heading"><a class="project-title project-src" project-number="9"></a></h3>
+                <p>Exploratory data analysis on Cardiovascular diseases (CVD) data using MySQL & Tableau.</p>
+                <div class="tagcloud project-stack" project-number="9"></div>
               </div>
             </div>
           </div>
           <!--project8-->
           <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry justify-content-end">
-              <a href="project8.html" class="block-20" style="background-image: url('images/image_8.jpeg');"></a>
+              <a class="block-20 project-src" project-number="8" style="background-image: url('images/image_8.jpeg');"></a>
               <div class="text mt-3 float-right d-block">
                 <div class="d-flex align-items-center mb-2 meta">
-                <p class="mb-0">
-                  <span class="mr-2">August, 2024</span>
-                  <!--<a href="#" class="mr-2">Admin</a>-->
-                  <a href="https://github.com/vinay-ram1999/SRDBv5-Analytics" target="_blank" rel="noopener noreferrer" class="meta-chat">
-                    <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/SRDBv5-Analytics">  
-                    <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/SRDBv5-Analytics">
-                  </a>
-                </p>
-              </div>
-              <h3 class="heading"><a class="project-title" project-number="8" href="project8.html"></a></h3>
-              <p>Exploratory data analysis on global soil respiration data using R, MySQL & Tableau.</p>
+                  <p class="mb-0">
+                    <span class="mr-2">August, 2024</span>
+                    <!--<a class="mr-2">Admin</a>-->
+                    <a class="meta-chat github-repo" project-number="8" repo-badges="true"></a>
+                  </p>
+                </div>
+                <h3 class="heading"><a class="project-title project-src" project-number="8"></a></h3>
+                <p>Exploratory data analysis on global soil respiration data using R, MySQL & Tableau.</p>
+                <div class="tagcloud project-stack" project-number="8"></div>
               </div>
             </div>
           </div>
@@ -130,60 +129,53 @@
           <!--project7-->
           <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry">
-              <a href="project7.html" class="block-20" style="background-image: url('images/image_7.jpeg');"></a>
+              <a class="block-20 project-src" project-number="7" style="background-image: url('images/image_7.jpeg');"></a>
               <div class="text mt-3 float-right d-block">
                 <div class="d-flex align-items-center mb-2 meta">
                   <p class="mb-0">
                     <span class="mr-2">December, 2024</span>
-                    <!--<a href="#" class="mr-2">Admin</a>-->
-                    <a href="https://github.com/vinay-ram1999/user_management" target="_blank" rel="noopener noreferrer" class="meta-chat">
-                      <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/user_management">  
-                      <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/user_management">
-                    </a>
+                    <!--<a class="mr-2">Admin</a>-->
+                    <a class="meta-chat github-repo" project-number="7" repo-badges="true"></a>
                   </p>
                 </div>
-                <h3 class="heading"><a class="project-title" project-number="7" href="project7.html"></a></h3>
+                <h3 class="heading"><a class="project-title project-src" project-number="7"></a></h3>
                 <p>Event-driven email notification system for users with Celery, Kafka and Postgres.</p>
+                <div class="tagcloud project-stack" project-number="7"></div>
               </div>
             </div>
           </div>
           <!--project6-->
           <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry justify-content-end">
-              <a href="project6.html" class="block-20" style="background-image: url('images/image_6.png');"></a>
+              <a class="block-20 project-src" project-number="6" style="background-image: url('images/image_6.png');"></a>
               <div class="text mt-3 float-right d-block">
                 <div class="d-flex align-items-center mb-2 meta">
-                <p class="mb-0">
-                  <span class="mr-2">October, 2024</span>
-                  <!--<a href="#" class="mr-2">Admin</a>
-                  <a href="https://github.com/vinay-ram1999/" target="_blank" rel="noopener noreferrer" class="meta-chat">
-                    <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/">  
-                    <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/">-->
-                  </a>
-                </p>
-              </div>
-              <h3 class="heading"><a class="project-title" project-number="6" href="project6.html"></a></h3>
-              <p>Interactive dashboards for visualizing University rankings using Tableau.</p>
+                  <p class="mb-0">
+                    <span class="mr-2">October, 2024</span>
+                    <!--<a class="mr-2">Admin</a>-->
+                  </p>
+                </div>
+                <h3 class="heading"><a class="project-title project-src" project-number="6"></a></h3>
+                <p>Interactive dashboards for visualizing University rankings using Tableau.</p>
+                <div class="tagcloud project-stack" project-number="6"></div>
               </div>
             </div>
           </div>
           <!--project5-->
           <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry justify-content-end">
-              <a href="project5.html" class="block-20" style="background-image: url('images/image_5.gif');"></a>
+              <a class="block-20 project-src" project-number="5" style="background-image: url('images/image_5.webp');"></a>
               <div class="text mt-3 float-right d-block">
                 <div class="d-flex align-items-center mb-2 meta">
-                <p class="mb-0">
-                  <span class="mr-2">October, 2023</span>
-                  <!--<a href="#" class="mr-2">Admin</a>-->
-                  <a href="https://github.com/vinay-ram1999/SolarFlareNet" target="_blank" rel="noopener noreferrer" class="meta-chat">
-                    <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/SolarFlareNet">  
-                    <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/SolarFlareNet">
-                  </a>
-                </p>
-              </div>
-              <h3 class="heading"><a class="project-title" project-number="5" href="project5.html"></a></h3>
-              <p>Deep learning framework for predicting solar flares using transformer model incorporated with Explainable AI (xAI) tools.</p>
+                  <p class="mb-0">
+                    <span class="mr-2">October, 2023</span>
+                    <!--<a class="mr-2">Admin</a>-->
+                    <a class="meta-chat github-repo" project-number="5" repo-badges="true"></a>
+                  </p>
+                </div>
+                <h3 class="heading"><a class="project-title project-src" project-number="5"></a></h3>
+                <p>Deep learning framework for predicting solar flares using transformer model incorporated with Explainable AI (xAI) tools.</p>
+                <div class="tagcloud project-stack" project-number="5"></div>
               </div>
             </div>
           </div>
@@ -192,60 +184,54 @@
           <!--project4-->
           <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry">
-              <a href="project4.html" class="block-20" style="background-image: url('images/image_4.jpg');"></a>
+              <a class="block-20 project-src" project-number="4" style="background-image: url('images/image_4.jpg');"></a>
               <div class="text mt-3 float-right d-block">
                 <div class="d-flex align-items-center mb-2 meta">
                   <p class="mb-0">
                     <span class="mr-2">February, 2023</span>
-                    <!--<a href="#" class="mr-2">Admin</a>-->
-                    <a href="https://github.com/vinay-ram1999/AlgoTrade-API" target="_blank" rel="noopener noreferrer" class="meta-chat">
-                      <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/AlgoTrade-API">  
-                      <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/AlgoTrade-API">
-                    </a>
+                    <!--<a class="mr-2">Admin</a>-->
+                    <a class="meta-chat github-repo" project-number="4" repo-badges="true"></a>
                   </p>
                 </div>
-                <h3 class="heading"><a class="project-title" project-number="4" href="project4.html"></a></h3>
+                <h3 class="heading"><a class="project-title project-src" project-number="4"></a></h3>
                 <p>Fully automated NSE Stock/Equity trading-bot for Kotak Securities API with integrated back testing and ML algorithms.</p>
+                <div class="tagcloud project-stack" project-number="4"></div>
               </div>
             </div>
           </div>
           <!--project3-->
           <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry justify-content-end">
-              <a href="project3.html" class="block-20" style="background-image: url('images/image_3.png');"></a>
+              <a class="block-20 project-src" project-number="3" style="background-image: url('images/image_3.png');"></a>
               <div class="text mt-3 float-right d-block">
                 <div class="d-flex align-items-center mb-2 meta">
-                <p class="mb-0">
-                  <span class="mr-2">December, 2023</span>
-                  <!--<a href="#" class="mr-2">Admin</a>-->
-                  <a href="https://github.com/vinay-ram1999/CS631-DMSD" target="_blank" rel="noopener noreferrer" class="meta-chat">
-                    <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/CS631-DMSD">  
-                    <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/CS631-DMSD">
-                  </a>
-                </p>
-              </div>
-              <h3 class="heading"><a class="project-title" project-number="3" href="project3.html"></a></h3>
-              <p>Design and implementation of a relational database system for an online store.</p>
+                  <p class="mb-0">
+                    <span class="mr-2">December, 2023</span>
+                    <!--<a class="mr-2">Admin</a>-->
+                    <a class="meta-chat github-repo" project-number="3" repo-badges="true"></a>
+                  </p>
+                </div>
+                <h3 class="heading"><a class="project-title project-src" project-number="3"></a></h3>
+                <p>Design and implementation of a relational database system for an online store.</p>
+                <div class="tagcloud project-stack" project-number="3"></div>
               </div>
             </div>
           </div>
           <!--project2-->
           <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry justify-content-end">
-              <a href="project2.html" class="block-20" style="background-image: url('images/image_2.jpg');"></a>
+              <a class="block-20 project-src" project-number="2" style="background-image: url('images/image_2.jpg');"></a>
               <div class="text mt-3 float-right d-block">
                 <div class="d-flex align-items-center mb-2 meta">
-                <p class="mb-0">
-                  <span class="mr-2">March, 2024</span>
-                  <!--<a href="#" class="mr-2">Admin</a>-->
-                  <a href="https://github.com/vinay-ram1999/WebScraping-R" target="_blank" rel="noopener noreferrer" class="meta-chat">
-                    <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/WebScraping-R">  
-                    <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/WebScraping-R">
-                  </a>
-                </p>
-              </div>
-              <h3 class="heading"><a class="project-title" project-number="2" href="project2.html"></a></h3>
-              <p>A web-scrapping tool built using R to collect published articles data and perform exploratory data analysis.</p>
+                  <p class="mb-0">
+                    <span class="mr-2">March, 2024</span>
+                    <!--<a class="mr-2">Admin</a>-->
+                    <a class="meta-chat github-repo" project-number="2" repo-badges="true"></a>
+                  </p>
+                </div>
+                <h3 class="heading"><a class="project-title project-src" project-number="2"></a></h3>
+                <p>A web-scrapping tool built using R to collect published articles data and perform exploratory data analysis.</p>
+                <div class="tagcloud project-stack" project-number="2"></div>
               </div>
             </div>
           </div>
@@ -254,19 +240,20 @@
           <!--project1-->
           <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry">
-              <a href="project1.html" class="block-20" style="background-image: url('images/image_1.jpg');"></a>
+              <a class="block-20 project-src" project-number="1" style="background-image: url('images/image_1.jpg');"></a>
               <div class="text mt-3 float-right d-block">
                 <div class="d-flex align-items-center mb-2 meta">
                   <p class="mb-0">
                     <span class="mr-2">March, 2020</span>
-                    <!--<a href="#" class="mr-2">Admin</a>-->
-                    <a href="https://github.com/UnstructuredFVM" target="_blank" rel="noopener noreferrer" class="meta-chat">
-                      <img alt="GitHub followers" src="https://img.shields.io/github/followers/UnstructuredFVM">
+                    <!--<a class="mr-2">Admin</a>-->
+                    <a class="meta-chat github-repo" project-number="1">
+                      <img class="github-followers" src="https://img.shields.io/github/followers/UnstructuredFVM">
                     </a>
                   </p>
                 </div>
-                <h3 class="heading"><a class="project-title" project-number="1" href="project1.html"></a></h3>
+                <h3 class="heading"><a class="project-title project-src" project-number="1"></a></h3>
                 <p>A multi-dimentional unstructured CFD solver built using Python which can run on multiple architectures like CPU, OpenMP & CUDA.</p>
+                <div class="tagcloud project-stack" project-number="1"></div>
               </div>
             </div>
           </div>
