--- a/projects/project-template.html
+++ b/projects/project-template.html
@@ -35,7 +35,7 @@
 	    <div class="container">
 	      <a class="navbar-brand" href="../index.html">Vinay</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
+	        <span class="oi oi-menu"></span>
 	      </button>
 
         <div class="collapse navbar-collapse project-navbar" id="ftco-nav"></div>
@@ -48,7 +48,7 @@
       <div class="container">
         <div class="row no-gutters slider-text js-partialheight align-items-end justify-content-center">
           <div class="col-md-12 ftco-animate pb-5 mb-3 text-center">
-            <h1 class="mb-3 bread project-title" project-number="7"></h1>
+            <h1 class="mb-3 bread project-title" project-number="11"></h1>
             <p class="breadcrumbs">
               <span class="mr-2">
                 <a href="../index.html#home-section">Home <i class="ion-ios-arrow-forward"></i></a>
@@ -57,7 +57,7 @@
                 <a href="projects.html">Projects <i class="ion-ios-arrow-forward"></i></a>
               </span>
               <span class="mr-2">
-                <a href="#" class="project-title" project-number="7"></a>
+                <a href="#" class="project-title" project-number="11"></a>
               </span>
             </p>
           </div>
@@ -81,25 +81,16 @@
           <div class="col-lg-4 sidebar ftco-animate ftco-no-pb">
             <div class="sidebar-box ftco-animate">
               <h3 class="heading-sidebar">Resources</h3>
-              <ul class="ftco-sidebar-social">
-                <li class="ftco-animate"><a href="#"><span class="icon-github"></span>GitHub Repository</a></li>
-                <li class="ftco-animate"><a href="#"><span class="fa fa-file-pdf-o" aria-hidden="true"></span>Project Report</a></li>
-                <li class="ftco-animate"><a href="#"><span class="fas fa-file-alt"></span>Publication</a></li>
+              <ul class="ftco-sidebar-social project-sidebar-links" project-number="11">
+                <li class="ftco-animate"><a class="github-link"></a></li>
+                <li class="ftco-animate"><a class="report-link"></a></li>
+                <li class="ftco-animate"><a class="paper-link"></a></li>
               </ul>
             </div>
             
             <div class="sidebar-box ftco-animate">
               <h3 class="heading-sidebar">Tech Stack</h3>
-              <div class="tagcloud">
-                <a class="tag-cloud-link">Python</a>
-                <a class="tag-cloud-link">office</a>
-                <a class="tag-cloud-link">building</a>
-                <a class="tag-cloud-link">land</a>
-                <a class="tag-cloud-link">table</a>
-                <a class="tag-cloud-link">interior</a>
-                <a class="tag-cloud-link">exterior</a>
-                <a class="tag-cloud-link">industrial</a>
-              </div>
+              <div class="tagcloud project-stack" project-number="11"></div>
             </div>
 
             <div class="sidebar-box ftco-animate">
