added under development warning in projects section; updated tech stack for all projects;

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -66,7 +66,8 @@
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
-            <p>Click on project title or image to read more.</p>
+            <h5 style="text-decoration: underline;">Note: This section of the website is under development.</h5>
+            <!-- <p>Click on the Github stars/forks links for more info.</p> -->
           </div>
         </div>
         <div class="row d-flex">
