removed static projects list; added dynamic javascript to load projects list; should work on individual project;

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -63,200 +63,11 @@
     </section>
 
     <section class="ftco-section ftco-no-pb" id="projects-sub-section">
-      <div class="container">
+      <div class="container" id="projects-container">
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h5 style="text-decoration: underline;">Note: This section of the website is under development.</h5>
             <!-- <p>Click on the Github stars/forks links for more info.</p> -->
-          </div>
-        </div>
-        <div class="row d-flex">
-          <!--project10-->
-          <div class="col-md-4 d-flex ftco-animate">
-            <div class="blog-entry justify-content-end">
-              <a class="block-20 project-src" project-number="10" style="background-image: url('images/image_10.jpg');"></a>
-              <div class="text mt-3 float-right d-block">
-                <div class="d-flex align-items-center mb-2 meta">
-                  <p class="mb-0">
-                    <span class="mr-2">September, 2024</span>
-                    <!--<a class="mr-2">Admin</a>-->
-                    <a class="meta-chat github-repo" project-number="10" repo-badges="true"></a>
-                  </p>
-                </div>
-                <h3 class="heading"><a class="project-title project-src" project-number="10"></a></h3>
-                <p>A multi-horizon stock price forecasting framework using deep learning.</p>
-                <div class="tagcloud project-stack" project-number="10"></div>
-              </div>
-            </div>
-          </div>
-          <!--project9-->
-          <div class="col-md-4 d-flex ftco-animate">
-            <div class="blog-entry justify-content-end">
-              <a class="block-20 project-src" project-number="9" style="background-image: url('images/image_9.png');"></a>
-              <div class="text mt-3 float-right d-block">
-                <div class="d-flex align-items-center mb-2 meta">
-                  <p class="mb-0">
-                    <span class="mr-2">September, 2024</span>
-                    <!--<a class="mr-2">Admin</a>-->
-                    <a class="meta-chat github-repo" project-number="9" repo-badges="true"></a>
-                  </p>
-                </div>
-                <h3 class="heading"><a class="project-title project-src" project-number="9"></a></h3>
-                <p>Exploratory data analysis on Cardiovascular diseases (CVD) data using MySQL & Tableau.</p>
-                <div class="tagcloud project-stack" project-number="9"></div>
-              </div>
-            </div>
-          </div>
-          <!--project8-->
-          <div class="col-md-4 d-flex ftco-animate">
-            <div class="blog-entry justify-content-end">
-              <a class="block-20 project-src" project-number="8" style="background-image: url('images/image_8.jpeg');"></a>
-              <div class="text mt-3 float-right d-block">
-                <div class="d-flex align-items-center mb-2 meta">
-                  <p class="mb-0">
-                    <span class="mr-2">August, 2024</span>
-                    <!--<a class="mr-2">Admin</a>-->
-                    <a class="meta-chat github-repo" project-number="8" repo-badges="true"></a>
-                  </p>
-                </div>
-                <h3 class="heading"><a class="project-title project-src" project-number="8"></a></h3>
-                <p>Exploratory data analysis on global soil respiration data using R, MySQL & Tableau.</p>
-                <div class="tagcloud project-stack" project-number="8"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row d-flex">
-          <!--project7-->
-          <div class="col-md-4 d-flex ftco-animate">
-            <div class="blog-entry">
-              <a class="block-20 project-src" project-number="7" style="background-image: url('images/image_7.jpeg');"></a>
-              <div class="text mt-3 float-right d-block">
-                <div class="d-flex align-items-center mb-2 meta">
-                  <p class="mb-0">
-                    <span class="mr-2">December, 2024</span>
-                    <!--<a class="mr-2">Admin</a>-->
-                    <a class="meta-chat github-repo" project-number="7" repo-badges="true"></a>
-                  </p>
-                </div>
-                <h3 class="heading"><a class="project-title project-src" project-number="7"></a></h3>
-                <p>Event-driven email notification system for users with Celery, Kafka and Postgres.</p>
-                <div class="tagcloud project-stack" project-number="7"></div>
-              </div>
-            </div>
-          </div>
-          <!--project6-->
-          <div class="col-md-4 d-flex ftco-animate">
-            <div class="blog-entry justify-content-end">
-              <a class="block-20 project-src" project-number="6" style="background-image: url('images/image_6.png');"></a>
-              <div class="text mt-3 float-right d-block">
-                <div class="d-flex align-items-center mb-2 meta">
-                  <p class="mb-0">
-                    <span class="mr-2">October, 2024</span>
-                    <!--<a class="mr-2">Admin</a>-->
-                  </p>
-                </div>
-                <h3 class="heading"><a class="project-title project-src" project-number="6"></a></h3>
-                <p>Interactive dashboards for visualizing University rankings using Tableau.</p>
-                <div class="tagcloud project-stack" project-number="6"></div>
-              </div>
-            </div>
-          </div>
-          <!--project5-->
-          <div class="col-md-4 d-flex ftco-animate">
-            <div class="blog-entry justify-content-end">
-              <a class="block-20 project-src" project-number="5" style="background-image: url('images/image_5.webp');"></a>
-              <div class="text mt-3 float-right d-block">
-                <div class="d-flex align-items-center mb-2 meta">
-                  <p class="mb-0">
-                    <span class="mr-2">October, 2023</span>
-                    <!--<a class="mr-2">Admin</a>-->
-                    <a class="meta-chat github-repo" project-number="5" repo-badges="true"></a>
-                  </p>
-                </div>
-                <h3 class="heading"><a class="project-title project-src" project-number="5"></a></h3>
-                <p>Deep learning framework for predicting solar flares using transformer model incorporated with Explainable AI (xAI) tools.</p>
-                <div class="tagcloud project-stack" project-number="5"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row d-flex">
-          <!--project4-->
-          <div class="col-md-4 d-flex ftco-animate">
-            <div class="blog-entry">
-              <a class="block-20 project-src" project-number="4" style="background-image: url('images/image_4.jpg');"></a>
-              <div class="text mt-3 float-right d-block">
-                <div class="d-flex align-items-center mb-2 meta">
-                  <p class="mb-0">
-                    <span class="mr-2">February, 2023</span>
-                    <!--<a class="mr-2">Admin</a>-->
-                    <a class="meta-chat github-repo" project-number="4" repo-badges="true"></a>
-                  </p>
-                </div>
-                <h3 class="heading"><a class="project-title project-src" project-number="4"></a></h3>
-                <p>Fully automated NSE Stock/Equity trading-bot for Kotak Securities API with integrated back testing and ML algorithms.</p>
-                <div class="tagcloud project-stack" project-number="4"></div>
-              </div>
-            </div>
-          </div>
-          <!--project3-->
-          <div class="col-md-4 d-flex ftco-animate">
-            <div class="blog-entry justify-content-end">
-              <a class="block-20 project-src" project-number="3" style="background-image: url('images/image_3.png');"></a>
-              <div class="text mt-3 float-right d-block">
-                <div class="d-flex align-items-center mb-2 meta">
-                  <p class="mb-0">
-                    <span class="mr-2">December, 2023</span>
-                    <!--<a class="mr-2">Admin</a>-->
-                    <a class="meta-chat github-repo" project-number="3" repo-badges="true"></a>
-                  </p>
-                </div>
-                <h3 class="heading"><a class="project-title project-src" project-number="3"></a></h3>
-                <p>Design and implementation of a relational database system for an online store.</p>
-                <div class="tagcloud project-stack" project-number="3"></div>
-              </div>
-            </div>
-          </div>
-          <!--project2-->
-          <div class="col-md-4 d-flex ftco-animate">
-            <div class="blog-entry justify-content-end">
-              <a class="block-20 project-src" project-number="2" style="background-image: url('images/image_2.jpg');"></a>
-              <div class="text mt-3 float-right d-block">
-                <div class="d-flex align-items-center mb-2 meta">
-                  <p class="mb-0">
-                    <span class="mr-2">March, 2024</span>
-                    <!--<a class="mr-2">Admin</a>-->
-                    <a class="meta-chat github-repo" project-number="2" repo-badges="true"></a>
-                  </p>
-                </div>
-                <h3 class="heading"><a class="project-title project-src" project-number="2"></a></h3>
-                <p>A web-scrapping tool built using R to collect published articles data and perform exploratory data analysis.</p>
-                <div class="tagcloud project-stack" project-number="2"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row d-flex">
-          <!--project1-->
-          <div class="col-md-4 d-flex ftco-animate">
-            <div class="blog-entry">
-              <a class="block-20 project-src" project-number="1" style="background-image: url('images/image_1.jpg');"></a>
-              <div class="text mt-3 float-right d-block">
-                <div class="d-flex align-items-center mb-2 meta">
-                  <p class="mb-0">
-                    <span class="mr-2">March, 2020</span>
-                    <!--<a class="mr-2">Admin</a>-->
-                    <a class="meta-chat github-repo" project-number="1">
-                      <img class="github-followers" src="https://img.shields.io/github/followers/UnstructuredFVM">
-                    </a>
-                  </p>
-                </div>
-                <h3 class="heading"><a class="project-title project-src" project-number="1"></a></h3>
-                <p>A multi-dimentional unstructured CFD solver built using Python which can run on multiple architectures like CPU, OpenMP & CUDA.</p>
-                <div class="tagcloud project-stack" project-number="1"></div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
