--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Vinay Ram Gazula</span></h1>
-			            <h2 class="mb-4">A Passionate Explorer of <span>Data</span></h2>
+			            <h2 class="mb-4">A Passionate <span>Data</span> Explorer!</h2>
 			            <!--<p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>-->
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 							<li class="ftco-animate"><a href="mailto:gazulavinayram@gmail.com"><span class="icon-at"></span></a></li>
