included dataexpert.io certificate;

--- a/index.html
+++ b/index.html
@@ -375,6 +375,16 @@
           </div>
         </div>
     		<div class="row">
+				<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dataexpert_bootcamp.png);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a>Data Engineering Bootcamp</a></h3>
+	    					<span>DataExpert.io</span>
+							<p><a href="https://learn.dataexpert.io/certification/vinaygazula/free-bootcamp-completion?__clerk_synced=true" target="_blank" rel="noopener noreferrer">click here</a> to verify</p>
+	    				</div>
+    				</div>
+  				</div>
     			<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/google-data-analytics-professional-certificate.2.png); background-size: 90%;">
     					<div class="overlay"></div>
@@ -385,7 +395,7 @@
 	    				</div>
     				</div>
   				</div>
-  				<div class="col-md-8">
+  				<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/UG_grad.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
@@ -395,7 +405,7 @@
 	    				</div>
     				</div>
   				</div>
-    			<div class="col-md-8">
+    			<div class="col-md-6">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/scholarship_bg.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
