added FLAIRS presentation in achievements;

--- a/index.html
+++ b/index.html
@@ -395,7 +395,17 @@
 	    				</div>
     				</div>
   				</div>
-  				<div class="col-md-4">
+				  <div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/FLAIRS.jpg); background-size: 90%;">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a>Presented Poster Paper</a></h3>
+	    					<span>FLAIRS-37</span>
+							<p><a href="https://journals.flvc.org/FLAIRS/article/view/135327" target="_blank" rel="noopener noreferrer">View paper</a></p>
+	    				</div>
+    				</div>
+  				</div>
+  				<div class="col-md-6">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/UG_grad.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
@@ -405,7 +415,7 @@
 	    				</div>
     				</div>
   				</div>
-    			<div class="col-md-6">
+    			<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/scholarship_bg.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
