--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 								<span>Project complete</span>
 							</p>
 							-->
-							<p><a href="files/master_resume.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-primary py-3 px-3">Resume</a></p>
+							<p><a href="files/vinay_gazula_resume.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-primary py-3 px-3">Resume</a></p>
 						</div>
 					</div>
 	        	</div>
