--- a/index.html
+++ b/index.html
@@ -469,7 +469,8 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://+19085521879">+1 908-552-1879</a></p>
+	            <!-- <p><a href="tel://+19085521879">+1 908-552-1879</a></p> -->
+				 <p>xxx-xxx-xxxx</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
