added directory listing table for files/;

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 			</div>
         </div>
 		<div class="text-center">
-			<p><a href="projects/projects.html" class="btn btn-primary py-3 px-3">View Projects</a></p>
+			<p><a href="projects/" class="btn btn-primary py-3 px-3">View Projects</a></p>
 		</div>
       </div>
     </section>
